syntax = "proto3";

option java_package = "net.alexyu.poc.model.proto";
option java_outer_classname = "PositionProto";
option java_multiple_files = true;

message Position {

    string acct_id = 1;
    string inst_id = 2;
    double total_qty = 3;
    double avg_price = 4;
    int64 create_timestamp = 5;
    int64 update_timestamp = 6;
}